Add some cool animations and also add some changes for better view

--- a/src/Component/About/LeftAbout.module.css
+++ b/src/Component/About/LeftAbout.module.css
@@ -1,12 +1,11 @@
 .leftClass {
   padding: 60px;
 }
+
 @media (max-width: 426px) {
   .leftClass {
     padding: 20px;
   }
 }
 
-@media (max-width: 376px) {
-  
-}
+@media (max-width: 376px) {}
