--- a/src/Component/About/LeftText.module.css
+++ b/src/Component/About/LeftText.module.css
@@ -30,9 +30,7 @@
   }
 }
 
-@media (max-width: 769px) {
-  
-}
+@media (max-width: 769px) {}
 
 @media (max-width: 426px) {
   .leftAboutTextClass h1 {
@@ -44,9 +42,6 @@
   }
 }
 
-@media (max-width: 376px) {
-  
-}
+@media (max-width: 376px) {}
 
-@media (max-width: 321px) {
-}
+@media (max-width: 321px) {}
