--- a/src/Component/About/RightData.module.css
+++ b/src/Component/About/RightData.module.css
@@ -18,13 +18,9 @@
   }
 }
 
-@media (max-width: 769px) {
-  
-}
+@media (max-width: 769px) {}
 
-@media (max-width: 426px) {
-  
-}
+@media (max-width: 426px) {}
 
 @media (max-width: 376px) {
 
@@ -41,5 +37,4 @@
   }
 }
 
-@media (max-width: 321px) {
-}
+@media (max-width: 321px) {}
