--- a/src/Component/About/About.module.css
+++ b/src/Component/About/About.module.css
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: row;
-  background-color: rgba(0,0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 
