--- a/src/Component/Contact Us/Contact.module.css
+++ b/src/Component/Contact Us/Contact.module.css
@@ -1,7 +1,7 @@
 .mainContactClass {
   display: flex;
   flex-direction: row;
-background-color: rgba(0, 0, 0,0.8);
+  background-color: rgba(0, 0, 0, 0.8);
   height: 100vh;
   width: 100vw;
   align-items: center;
@@ -23,4 +23,3 @@ background-color: rgba(0, 0, 0,0.8);
     flex: 100%;
   }
 }
-
