--- a/src/Component/Home/Home.module.css
+++ b/src/Component/Home/Home.module.css
@@ -36,12 +36,14 @@
 }
 
 .homeContainer .text {
-  position: absolute;
+  position: relative;
   top: 30%;
   width: 60%;
+  height: auto;
   left: 10%;
   color: white;
   z-index: 4;
+  padding-top: 1px;
 }
 
 .homeContainer .text h1 {
@@ -55,8 +57,7 @@
 
 .homeContainer .btnClass {
   position: absolute;
-  bottom: 15%;
-  left: 10%;
+  bottom: -35%;
   color: cyan;
   border: 2px solid cyan;
   background-color: rgba(0, 0, 0, 0.5);
@@ -82,8 +83,7 @@
   border: none;
 }
 
-/* @media (max-width: 2561px) {
-} */
+@media (max-width: 2561px) {}
 
 @media (max-width: 1441px) {
   .homeContainer .text h1 {
@@ -111,7 +111,7 @@
   }
 
   .homeContainer .btnClass {
-    bottom: 20%;
+    bottom: -45%;
   }
 }
 
@@ -122,7 +122,7 @@
   }
 
   .homeContainer .btnClass {
-    bottom: 24%;
+    bottom: -44%;
   }
 }
 
@@ -142,8 +142,7 @@
   }
 
   .homeContainer .btnClass {
-    left: 5%;
-    bottom: 19%;
+    bottom: -23%;
     width: 150px;
     height: 30px;
     font-size: 15px;
@@ -152,7 +151,8 @@
 
 @media (max-width: 321px) {
   .homeContainer .text h1 {
-    font-size: 35px;
+    font-size: 45px;
+    padding-bottom: 10px;
   }
 
   .homeContainer .text p {
@@ -160,6 +160,6 @@
   }
 
   .homeContainer .btnClass {
-    bottom: 25%;
+    bottom: -25%;
   }
 }
