--- a/src/Component/Services/ServiceItems.module.css
+++ b/src/Component/Services/ServiceItems.module.css
@@ -2,13 +2,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  /* margin: 20px; */
   padding: 10px;
   width: 100vw;
   font-weight: 900;
 }
 
-.serviceItemClass .leftItemsClass  {
+.serviceItemClass .leftItemsClass {
   flex: 50%;
   margin: 10px 30px;
   width: 100%;
@@ -19,9 +18,7 @@
   margin: 0px 30px;
 }
 
-@media (max-width: 1025px) {
-  
-}
+@media (max-width: 1025px) {}
 
 @media (max-width: 769px) {
   .serviceItemClass {
@@ -38,13 +35,8 @@
   }
 }
 
-@media (max-width: 426px) {
-  
-}
+@media (max-width: 426px) {}
 
-@media (max-width: 376px) {
-  
-}
+@media (max-width: 376px) {}
 
-@media (max-width: 321px) {
-}
+@media (max-width: 321px) {}
